--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "concurrently \"node server/server.js\" \"npm run dev --host\"",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -13,9 +14,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/websocket": "^10.0.1",
     "chart.js": "^4.4.3",
     "chartjs-chart-geo": "^4.3.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "concurrently": "^8.2.2",
+    "fastify": "^4.27.0",
     "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
