--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/websocket": "^10.0.1",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "chartjs-chart-geo": "^4.3.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "concurrently": "^8.2.2",
+    "date-fns": "^3.6.0",
     "fastify": "^4.27.0",
     "framer-motion": "^11.2.6",
+    "moment": "^2.30.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "topojson-client": "^3.1.0",
