--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "date-fns": "^3.6.0",
     "fastify": "^4.27.0",
     "framer-motion": "^11.2.6",
+    "iso-3166-1-alpha-2": "^1.0.2",
     "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
