--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
     "topojson-client": "^3.1.0",
     "us-atlas": "^3.0.1",
