--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
     "fastify": "^4.27.0",
     "framer-motion": "^11.2.6",
     "iso-3166-1-alpha-2": "^1.0.2",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "node-fetch": "^3.3.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-tooltip": "^5.26.4",
     "topojson-client": "^3.1.0",
-    "us-atlas": "^3.0.1",
+    "wordcloud": "^1.2.2",
     "world-atlas": "^2.0.2"
   },
   "devDependencies": {
