--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/styled": "^11.11.5",
     "@fastify/cors": "^9.0.1",
     "@fastify/websocket": "^10.0.1",
+    "@visx/wordcloud": "^3.3.0",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-chart-geo": "^4.3.0",
+    "chartjs-chart-wordcloud": "^4.4.1",
     "chartjs-plugin-zoom": "^2.0.1",
     "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
@@ -33,7 +35,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-tagcloud": "^2.3.3",
     "react-tooltip": "^5.26.4",
+    "react-wordcloud": "^1.2.7",
     "topojson-client": "^3.1.0",
     "wordcloud": "^1.2.2",
     "world-atlas": "^2.0.2"
