--- a/package.json
+++ b/package.json
@@ -11,22 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
     "@fastify/cors": "^9.0.1",
     "@fastify/websocket": "^10.0.1",
-    "@visx/wordcloud": "^3.3.0",
     "chart.js": "^4.4.3",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-adapter-moment": "^1.0.1",
     "chartjs-chart-geo": "^4.3.0",
-    "chartjs-chart-wordcloud": "^4.4.1",
     "chartjs-plugin-zoom": "^2.0.1",
     "concurrently": "^8.2.2",
     "date-fns": "^3.6.0",
     "fastify": "^4.27.0",
-    "framer-motion": "^11.2.6",
     "iso-3166-1-alpha-2": "^1.0.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
@@ -35,12 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-tagcloud": "^2.3.3",
     "react-tooltip": "^5.26.4",
-    "react-wordcloud": "^1.2.7",
-    "topojson-client": "^3.1.0",
-    "wordcloud": "^1.2.2",
-    "world-atlas": "^2.0.2"
+    "react-wordcloud": "^1.2.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
